--- a/app/src/main/res/layout/item_kandidat.xml
+++ b/app/src/main/res/layout/item_kandidat.xml
@@ -15,30 +15,57 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:gravity="center"
             android:padding="16dp">
+
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/kandidat_image"
+                android:id="@+id/kandidat_ketua_image"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
+                android:layout_alignParentStart="true"
                 android:layout_gravity="center"
-                app:civ_border_width="3dp"
                 app:civ_border_color="@color/white"
-                android:layout_alignParentEnd="true"/>
+                app:civ_border_width="3dp"
+                android:layout_centerVertical="true"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/kandidat_wakil_image"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="3dp"
+                android:layout_centerVertical="true"/>
             <RelativeLayout
+                android:id="@+id/ll1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/kandidat_image"
-                android:layout_centerVertical="true">
+                android:layout_toEndOf="@+id/kandidat_ketua_image"
+                android:layout_toStartOf="@id/kandidat_wakil_image"
+                android:layout_centerInParent="true"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin">
                 <TextView
-                    android:id="@+id/kandidat_nama"
+                    android:id="@+id/kandidat_ketua_nama"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    android:layout_centerInParent="true"
                     android:text="Kandidat Nama"
-                    android:textSize="24sp"
-                    android:textStyle="bold"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_alignParentStart="true"/>
+
+                <TextView
+                    android:id="@+id/kandidat_wakil_nama"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/kandidat_ketua_nama"
+                    android:layout_alignParentEnd="true"
+                    android:text="Kandidat Nama"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </RelativeLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
